<resources>
    <string-array name="difficulties_array">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
        <item>Expert</item>
    </string-array>

    <string name="app_name">Hoppers</string>

    <string name="loading_game_text">Loading game</string>
    <string name="multi_player_txt">Multi Player</string>
    <string name="single_player_txt">Single Player</string>

    <string name="no_bluetooth_support_err">This device has no Bluetooth support!</string>
    <string name="not_bluetooth_discoverable">The device is not bluetooth discoverable!</string>
    <string name="accepting_connections_err">Error accepting bluetooth connections!</string>
    <string name="discoverable_err">Error setting device discoverable!</string>
    <string name="sending_text">Sending</string>

    <string name="no_response">No response!</string>
    <string name="opponent_rejected">Opponent rejected!</string>

    <string name="bluetooth_error">Bluetooth Error!</string>
    <string name="unexpected_error">Sorry, Unexpected Error.</string>

    <string name="no_bluetooth_devices_found">No hoppers found</string>

    <string name="incoming_request_msg">challenged you for a dual in</string>
    <string name="level_msg">level</string>
    <string name="accept_btn_text">Accept</string>
    <string name="reject_btn_text">Reject</string>

    <string name="choose_hopper_text">Choose hopper and difficulty\n or wait for invitation</string>
    <string name="choose_hopper_refused_text">Player refused, choose hopper or wait for invitation</string>
    <string name="refresh_btn_text">Refresh</string>

    <string name="connecting_text">Connecting</string>


    <string name="choose_level_text">Choose Level</string>

    <string name="record">Record: </string>

    <string name="time_played_text">Time Played: </string>
    <string name="view_solution_text">View solution</string>
    <string name="undo">Undo</string>
    <string name="end_solution_msg">End of solution</string>
    <string name="first_solution_step_msg">No previous steps</string>
    <string name="no_more_undo_msg">No previous steps</string>
    <string name="bluetooth_game_over_msg">Bluetooth game ended</string>
    <string name="bluetooth_opponent_exited">Opponent exited</string>
    <string name="invalid_hop_text">Invalid hop</string>

    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="expert">Expert</string>

    <string name="won_text">You Won !</string>
    <string name="losing_text">You lost…</string>
    <string name="try_level">Try level </string>
    <string name="finished_time">Finished time:</string>


</resources>
