<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_small"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_name_text"
            style="@style/incomingReqText"
            android:layout_gravity="center"
            android:paddingRight="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/incoming_request_text"
            android:text="@string/incoming_request_msg"
            android:layout_gravity="center"
            style="@style/incomingReqText"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/level_name_text"
                style="@style/incomingReqText"
                android:paddingRight="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/level_text"
                android:text="@string/level_msg"
                style="@style/incomingReqText"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/incoming_request_main_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <ProgressBar
                android:id="@+id/indeterminate_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:background="@drawable/progress_background"/>
            <TextView
                android:id="@+id/sending_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sending_text"
                android:textSize="30sp"
                android:textColor="@color/text_color"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/request_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="40dp">
                    <ImageButton
                        android:id="@+id/accept_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:src="@drawable/green_frog_accept"
                        android:paddingLeft="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accept_btn_text"
                        style="@style/incomingReqText"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="40dp">
                    <ImageButton
                        android:id="@+id/reject_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:src="@drawable/red_frog_reject"
                        android:paddingLeft="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reject_btn_text"
                        style="@style/incomingReqText"
                        android:layout_gravity="center" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>


</LinearLayout>