<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hoppers.com.tamir.hoopers.end.GameOverActivity"
    android:background="@color/app_background">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_small"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/game_over_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:textColor="@color/text_color"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:text="@string/won_text"/>

    <ImageView
        android:id="@+id/game_over_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/game_over_text"
        android:src="@drawable/green_frog_game_over_winner"/>

    <LinearLayout
        android:id="@+id/finished_time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_over_image"
        android:layout_centerHorizontal="true"
        android:text="11:00:00">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:textColor="@color/text_color"
            android:text="@string/finished_time"/>
        <TextView
            android:id="@+id/finished_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:textColor="@color/text_color"
            android:text="11:00:00"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/next_level_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp">
        <ImageButton
            android:id="@+id/next_level_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next"
            android:background="@null"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_level"
                android:textSize="17sp"
                android:textColor="@color/text_color"
                android:paddingRight="5sp"/>
            <TextView
                android:id="@+id/next_level_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/text_color" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
