<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hoppers.com.tamir.hoopers.HomeScreen"
    android:background="@color/app_background">

    <ImageView
        android:id="@+id/leaf_center_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/leaf_home_screen2"
        android:layout_alignParentRight="true"
        android:paddingTop="10dp"
        android:layout_marginRight="7dp"
        android:layout_centerVertical="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/leaf_home_screen"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentLeft="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/leaf_home_screen"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        android:layout_marginLeft="20dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>
    <FrameLayout
        android:id="@+id/home_screen_loading_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="40dp">
        <LinearLayout
            android:id="@+id/home_screen_buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/multiPlayerLayout"
                android:orientation="vertical"
                android:layout_marginRight="30dp">

                <ImageButton
                    android:id="@+id/multiPlayerImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/multiplayer"
                    android:background="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multi_player_txt"
                    android:textSize="18sp"
                    android:textColor="@color/text_color"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/singlePlayerImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/single_player"
                    android:background="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/single_player_txt"
                    android:textSize="18sp"
                    android:textColor="@color/text_color"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <ProgressBar
                android:id="@+id/indeterminateBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:background="@drawable/progress_background"/>
            <TextView
                android:id="@+id/loading_game_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading_game_text"
                android:textSize="30sp"
                android:textColor="@color/text_color"/>
        </LinearLayout>
    </FrameLayout>
    <ImageView
        android:id="@+id/home_screen_green_frog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/home_screen_loading_frame"/>

    <ImageView
        android:id="@+id/home_screen_red_frog"
        android:layout_marginBottom="-10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_above="@id/leaf_center_right"/>

</RelativeLayout>
